--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -10,12 +10,20 @@
   -webkit-user-select: none;
   user-select: none;
   min-height: 8dvh;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 nav h1 {
   position: relative;
   margin: 20px 10px;
   cursor: pointer;
+
 }
 
 span.logo-this {
